--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
         "psr-4" : {
             "App\\": "app/",
             "Gravatalonga\\": "src/"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -31,6 +34,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^12.1"
+        "phpunit/phpunit": "^12.1",
+        "symfony/var-dumper": "^7.2"
     }
 }
