--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "resources/css/app.css": {
-    "file": "assets/app-Behf1X6y.css",
+    "file": "assets/app-CkNAa6gM.css",
     "src": "resources/css/app.css",
     "isEntry": true
   },
